--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <center>
                   <br>
                   <span style="font-size:20px">
-                    Paper <a href="https://arxiv.org/"> [arXiv]</a>
+                    Paper <a href="https://arxiv.org/abs/2306.00973/"> [arXiv]</a>
                   </span>
                 </center>
               </td>
