--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <tbody><tr>
               <td align="center" width="100px">
         <center>
-          <span style="font-size:16px"><a href="https://github.com/Verg-Avesta/">Chang Liu</a><sup>1, 3*</sup></span>
+          <span style="font-size:16px"><a href="https://github.com/Verg-Avesta/">Chang Liu</a><sup>1,3*</sup></span>
           </center>
           </td>
               <td align="center" width="160px">
