--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </td>
               <td align="center" width="160px">
         <center>
-          <span style="font-size:16px"><a href="https://cmic.sjtu.edu.cn/CN/show.aspx?info_lb=35&info_id=1341&flag=35">Xiaoyun Zhang</a><sup>1</sup></span>
+          <span style="font-size:16px"><a href="https://mediabrain.sjtu.edu.cn/xiaoyun-zhang/">Xiaoyun Zhang</a><sup>1</sup></span>
           </center>
         </td>
               <td align="center" width="160px">
