--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
                 <center>
                   <br>
                   <span style="font-size:20px">
-                    <!-- Paper <a href="https://arxiv.org/abs/2306.00973/"> [arXiv]</a> -->
-                    Paper <a href="./StoryGen_paper.pdf"> [PDF]</a>
+                    Paper <a href="https://arxiv.org/abs/2306.00973/"> [arXiv]</a>
+                    <!-- Paper <a href="./StoryGen_paper.pdf"> [PDF]</a> -->
                   </span>
                 </center>
               </td>
