--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <tbody><tr>
                   <td align="center" width="700px">
             <center>
-                  <span style="font-size:24px"><strong>Under Review</strong></span>
+                  <span style="font-size:24px"><strong>CVPR 2024</strong></span>
               </center>
               </td>
       </tr></tbody></table>
