--- a/index.html
+++ b/index.html
@@ -172,29 +172,29 @@
           <span style="font-size:16px"><a href="https://verg-avesta.github.io/">Chang Liu</a><sup>1,3*</sup></span>
           </center>
           </td>
-              <td align="center" width="100px">
+              <td align="center" width="110px">
         <center>
           <span style="font-size:16px"><a href="https://haoningwu3639.github.io/">Haoning Wu</a><sup>1*</sup></span>
           </center>
         </td>
-            <td align="center" width="100px">
+            <td align="center" width="110px">
           <center>
             <span style="font-size:16px"><a href="https://y-zhong.info/">Yujie Zhong</a><sup>2</sup></span>
             </center>
             </td>
               <td align="center" width="120px">
         <center>
-          <span style="font-size:16px"><a href="https://mediabrain.sjtu.edu.cn/xiaoyun-zhang/">Xiaoyun Zhang</a><sup>1 <img class="round" style="width:12px" src="./resources/corresponding_fig.png"></sup></span>
+          <span style="font-size:16px"><a href="https://mediabrain.sjtu.edu.cn/xiaoyun-zhang/">Xiaoyun Zhang</a><sup>1</sup></span>
           </center>
         </td>
         <td align="center" width="120px">
           <center>
-            <span style="font-size:16px"><a href="https://mediabrain.sjtu.edu.cn/members/">Yanfeng Wang</a><sup>1,3 <img class="round" style="width:12px" src="./resources/corresponding_fig.png"></sup></span>
+            <span style="font-size:16px"><a href="https://mediabrain.sjtu.edu.cn/members/">Yanfeng Wang</a><sup>1,3</sup></span>
             </center>                
         </td>
-        <td align="center" width="110px">
+        <td align="center" width="120px">
         <center>
-          <span style="font-size:16px"><a href="https://weidixie.github.io/">Weidi Xie</a><sup>1,3 <img class="round" style="width:12px" src="./resources/corresponding_fig.png"></sup></span>
+          <span style="font-size:16px"><a href="https://weidixie.github.io/">Weidi Xie</a><sup>1,3</sup></span>
           </center>                
         </td>
         
