--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <left>
               Generative models have recently exhibited exceptional capabilities in text-to-image generation, but still struggle to generate image sequences coherently. 
               In this work, we focus on a novel, yet challenging task of generating a coherent image sequence based on a given storyline, denoted as <strong><i>open-ended visual storytelling</i></strong>.
-              We make the following three contributions: <br>
+              We make the following three contributions:  <br>
               (i) to fulfill the task of visual storytelling,
               we propose a learning-based auto-regressive image generation model, termed as <strong>StoryGen</strong>, 
               with a novel vision-language context module, that enables to generate the current frame by conditioning on the corresponding text prompt and preceding image-caption pairs; <br>
@@ -298,7 +298,7 @@
               (iii) Quantitative experiments and human evaluations have validated the superiority of our StoryGen, 
               where we show StoryGen can generalize to unseen characters without any optimization, 
               and generate image sequences with coherent content and consistent character. <br>
-              The code, model, and dataset will be made publicly available to the research community.
+              Code, dataset, and models are available at: <a href="https://github.com/haoningwu3639/StoryGen"> [StoryGen]</a>.
             </left></p>
         </div>
       </div>
